{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 69,
  "lineage": "c96496f7-428a-f123-7b0c-5958f10c7bfb",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "qa_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:290364255171:loadbalancer/app/claresys-qa-alb/f909a7b878d2b309",
            "arn_suffix": "app/claresys-qa-alb/f909a7b878d2b309",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "claresys-qa-alb-325550391.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:290364255171:loadbalancer/app/claresys-qa-alb/f909a7b878d2b309",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "claresys-qa-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0de085230f5b70ca5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-021ccfe7d0dbb5d05"
              },
              {
                "subnet_id": "subnet-05c058ce3fc163e9c"
              },
              {
                "subnet_id": "subnet-0b81409a7c9ca95f9"
              },
              {
                "subnet_id": "subnet-0ebc76ba1995a9520"
              },
              {
                "subnet_id": "subnet-0ede062164a4d51a2"
              }
            ],
            "subnets": [
              "subnet-021ccfe7d0dbb5d05",
              "subnet-05c058ce3fc163e9c",
              "subnet-0b81409a7c9ca95f9",
              "subnet-0ebc76ba1995a9520",
              "subnet-0ede062164a4d51a2"
            ],
            "vpc_id": "vpc-0e3d23a800ad3257b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:290364255171:loadbalancer/app/claresys-qa-alb/f909a7b878d2b309"
          },
          "dependencies": [
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:290364255171:listener/app/claresys-qa-alb/f909a7b878d2b309/f6af63a432e77656",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:290364255171:targetgroup/claresys-qa-tg/523cb3b29d222603",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:290364255171:listener/app/claresys-qa-alb/f909a7b878d2b309/f6af63a432e77656",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:290364255171:loadbalancer/app/claresys-qa-alb/f909a7b878d2b309",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:290364255171:listener/app/claresys-qa-alb/f909a7b878d2b309/f6af63a432e77656"
          },
          "dependencies": [
            "module.alb.aws_lb.qa_alb",
            "module.alb.aws_lb_target_group.qa_tg",
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "qa_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:290364255171:targetgroup/claresys-qa-tg/523cb3b29d222603",
            "arn_suffix": "targetgroup/claresys-qa-tg/523cb3b29d222603",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:290364255171:targetgroup/claresys-qa-tg/523cb3b29d222603",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "claresys-qa-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e3d23a800ad3257b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:290364255171:targetgroup/claresys-qa-tg/523cb3b29d222603"
          },
          "dependencies": [
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.databases",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-076732ef6da62445f",
            "arn": "arn:aws:ec2:us-east-1:290364255171:instance/i-0e6825b2fda20a37d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6825b2fda20a37d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-014f6e36a95523ac7"
              }
            ],
            "primary_network_interface_id": "eni-014f6e36a95523ac7",
            "private_dns": "ip-172-31-36-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.50",
            "public_dns": "ec2-54-81-25-181.compute-1.amazonaws.com",
            "public_ip": "54.81.25.181",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09abea27860c74838",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "claresys-qa-db-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebc76ba1995a9520",
            "tags": {
              "Name": "claresys-qa-mongo"
            },
            "tags_all": {
              "Name": "claresys-qa-mongo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc06d8ee86b8959d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290364255171",
            "id": "i-0e6825b2fda20a37d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.app_sg",
            "module.security.aws_security_group.db_sg"
          ]
        }
      ]
    },
    {
      "module": "module.databases",
      "mode": "managed",
      "type": "aws_instance",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-076732ef6da62445f",
            "arn": "arn:aws:ec2:us-east-1:290364255171:instance/i-03c30ddb34e2d88f7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c30ddb34e2d88f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-018291f1d6339a30d"
              }
            ],
            "primary_network_interface_id": "eni-018291f1d6339a30d",
            "private_dns": "ip-172-31-46-186.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.46.186",
            "public_dns": "ec2-174-129-139-130.compute-1.amazonaws.com",
            "public_ip": "174.129.139.130",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f0e4b447227e9a61",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "claresys-qa-db-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebc76ba1995a9520",
            "tags": {
              "Name": "claresys-qa-postgres"
            },
            "tags_all": {
              "Name": "claresys-qa-postgres"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc06d8ee86b8959d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290364255171",
            "id": "i-03c30ddb34e2d88f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.app_sg",
            "module.security.aws_security_group.db_sg"
          ]
        }
      ]
    },
    {
      "module": "module.databases",
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-076732ef6da62445f",
            "arn": "arn:aws:ec2:us-east-1:290364255171:instance/i-0f4f270f5cf9d8aa3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f4f270f5cf9d8aa3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01e6d2a678a9ac752"
              }
            ],
            "primary_network_interface_id": "eni-01e6d2a678a9ac752",
            "private_dns": "ip-172-31-45-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.180",
            "public_dns": "ec2-54-161-111-110.compute-1.amazonaws.com",
            "public_ip": "54.161.111.110",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-027b42b7e6c135522",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "claresys-qa-db-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebc76ba1995a9520",
            "tags": {
              "Name": "claresys-qa-redis"
            },
            "tags_all": {
              "Name": "claresys-qa-redis"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc06d8ee86b8959d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290364255171",
            "id": "i-0f4f270f5cf9d8aa3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.app_sg",
            "module.security.aws_security_group.db_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:290364255171:vpc/vpc-0e3d23a800ad3257b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05729da0602547823",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-089dd164e72e357be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3d23a800ad3257b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e1bbfa4886fd53e2",
            "owner_id": "290364255171",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:290364255171:security-group/sg-0de085230f5b70ca5",
            "description": "ALB SG QA",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de085230f5b70ca5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "claresys-qa-alb-sg",
            "name_prefix": "",
            "owner_id": "290364255171",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e3d23a800ad3257b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290364255171",
            "id": "sg-0de085230f5b70ca5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:290364255171:security-group/sg-077c2ba8819c6074d",
            "description": "QA Microservices SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077c2ba8819c6074d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de085230f5b70ca5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "claresys-qa-app-sg",
            "name_prefix": "",
            "owner_id": "290364255171",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e3d23a800ad3257b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290364255171",
            "id": "sg-077c2ba8819c6074d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.data.aws_vpc.default",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:290364255171:security-group/sg-0bc06d8ee86b8959d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc06d8ee86b8959d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077c2ba8819c6074d"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077c2ba8819c6074d"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077c2ba8819c6074d"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "claresys-qa-db-sg",
            "name_prefix": "",
            "owner_id": "290364255171",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e3d23a800ad3257b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290364255171",
            "id": "sg-0bc06d8ee86b8959d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.data.aws_vpc.default",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.app_sg"
          ]
        }
      ]
    }
  ]
}